# geant4-b4cfilm-investigations

./: .gitignore  README.md  conda.yml
data/: res_80percentb10_n1e7.json  res_n1e8.json  res_sphere_n1e8.json
diagrams/: diagram.odg
recipes/: b10film.c  b10film.py
src/: CMakeLists.txt  film.cc
